apply webpack-dev-server

--- a/demo/test.html
+++ b/demo/test.html
@@ -8,8 +8,9 @@
 <script src="../bower_components/pixi.js/bin/pixi.min.js"></script>
 <script src="../dist/rurple.min.js"></script>
 <script>
-    var rurple = new rurple.Player();
-    rurple.initRenderer(document.body);
+    var player = new rurple.Player();
+    player.initRenderer(document.body);
+    player.startAnimate();
 </script>
 </body>
 </html>
